# kokoroxide

./: .gitignore  Cargo.toml  README.md  build.rs  create_identity_model.py
src/: espeak_g2p.rs  espeak_ipa_tokenizer.rs  interactive.rs  ipa_tokenizer.rs  lib.rs  main.rs  playback.rs
src/espeak/: g2p.rs  ipa_tokenizer.rs  mod.rs
src/kokoro/: mod.rs  normalization.rs  tts.rs  voice.rs
src/test/: analyze_ipa.rs  identity_test.rs  kokoro_test.rs  mod.rs  test_direct_phonemes.rs  test_espeak.rs  test_espeak_tokenizer.rs  test_ipa_tokenizer.rs  test_misaki_conversion.rs  test_raw_tokens.rs  test_rustruut.rs
