[package]
name = "ronnex"
version = "0.1.0"
edition = "2021"

[build-dependencies]
clang-sys = { version = "1.8", features = ["runtime"] }

[dependencies]
regex = "1.11.0"
ndarray = "0.15"
hound = "3.5"
ort = { version = "1.16", features = ["download-binaries"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
phonetisaurus-g2p = "0.1"
rodio = { version = "0.17", features = ["symphonia-all"] }
